<resources>

    <string name="app_name">오늘의 할 일!</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="doing_homework">과제하기</string>
    <string name="minus_sign">-</string>
    <string name="hint_todo">할 일</string>
    <string name="button_text">추가</string>
    <string name="todo_item_description">Description of the to-do item</string>
    <string name="description_of_text">Description of the text</string>
    <string name="minus_sign_description">Minus sign</string>
    <string name="delete_button_description" translatable="false">Delete</string>

</resources>