<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:contentDescription="@string/minus_sign_description"
        android:text="@string/minus_sign"
        android:textSize="10pt"
        tools:ignore="TextSizeCheck"
        app:fontFamily="@font/font_family"
        xmlns:app="http://schemas.android.com/apk/res-auto"/>

    <TextView
        android:id="@+id/textview_todo_item"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/todo_item_description"
        android:text="@string/doing_homework"
        android:textSize="10pt"
        tools:ignore="TextSizeCheck"
        app:fontFamily="@font/font_family"
        xmlns:app="http://schemas.android.com/apk/res-auto"/>

    <ImageButton
        android:id="@+id/button_todo_item"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_delete_custom_24dp"
        android:contentDescription="@string/delete_button_description"
        android:layout_marginStart="10dp"/>


</LinearLayout>