<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/description_of_text"
        android:text="@string/app_name"
        android:textSize="10pt"
        android:textStyle="bold"
        app:fontFamily="@font/font_family"
        tools:ignore="TextSizeCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler1"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_rectangle"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_todo_main"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:autofillHints="none"
            android:hint="@string/hint_todo"
            android:inputType="text"
            app:fontFamily="@font/font_family" />

        <Button
            android:id="@+id/button_insert_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/button_text"
            android:textStyle="bold"
            app:fontFamily="@font/font_family"/>
    </LinearLayout>

</LinearLayout>